@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2001-2003 Swedish Institute of Computer Science.
+ * Modifications Copyright (c) 2006 Christian Walter <wolti@sil.at>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modification,
@@ -29,7 +30,7 @@
  * Author: Adam Dunkels <adam@sics.se>
  * Modifcations: Christian Walter <wolti@sil.at>
  *
- * $Id: sys_arch.c,v 1.1 2006/08/30 23:18:07 wolti Exp $
+ * $Id: sys_arch.c,v 1.2 2006/09/06 20:12:38 wolti Exp $
  */
 
 /* ------------------------ System includes ------------------------------- */
@@ -54,7 +55,6 @@
 /* ------------------------ Defines --------------------------------------- */
 /* This is the number of threads that can be started with sys_thead_new() */
 #define SYS_MBOX_SIZE               ( 16 )
-#define SYS_THREAD_MAX              ( 4 )
 #define MS_TO_TICKS( ms )           \
     ( portTickType )( ( portTickType ) ( ms ) / portTICK_RATE_MS )
 #define TICKS_TO_MS( ticks )        \
@@ -65,9 +65,18 @@
 /* Must hold the string THREAD_NAME + task number + terminating '\0'. */
 #define THREAD_NAME_LEN_MAX         6
 
+#define THREAD_INIT( tcb ) \
+    do { \
+        tcb->next = NULL; \
+        tcb->pid = ( xTaskHandle )0; \
+        tcb->timeouts.next = NULL; \
+        memset( tcb->name, 0, THREAD_NAME_LEN_MAX ); \
+    } while( 0 )
+
 /* ------------------------ Type definitions ------------------------------ */
-typedef struct
+typedef struct sys_tcb
 {
+    struct sys_tcb *next;
     struct sys_timeouts timeouts;
     xTaskHandle     pid;
     char            name[THREAD_NAME_LEN_MAX];
@@ -77,26 +86,14 @@ typedef struct
 sys_tcb_t      *sys_thread_current( void );
 
 /* ------------------------ Static variables ------------------------------ */
-static sys_tcb_t tasks[SYS_THREAD_MAX];
-static int      nextthread = 0;
+static sys_tcb_t *tasks = NULL;
 
 /* ------------------------ Start implementation -------------------------- */
 void
 sys_init( void )
 {
-    int             i;
-
-    /* Initialize the the per-thread sys_timeouts structures  make sure there
-     * are no valid pids in the list */
-    for( i = 0; i < SYS_THREAD_MAX; i++ )
-    {
-        tasks[i].timeouts.next = NULL;
-        tasks[i].pid = 0;
-        snprintf( tasks[i].name, THREAD_NAME_LEN_MAX, "%s%d", THREAD_NAME, i );
-    }
-
-    /* keep track of how many threads have been created */
-    nextthread = 0;
+    LWIP_ASSERT( "sys_init: not called first\r\n", tasks == NULL );
+    tasks = NULL;
 }
 
 /*
@@ -136,84 +133,168 @@ sys_arch_unprotect( sys_prot_t pval )
  * Prints an assertion messages and aborts execution.
  */
 void
-sys_assert( const char *szAssertMsg )
+sys_assert( const char *msg )
 {
-    ( void )fputs( szAssertMsg, stderr );
+    ( void )fputs( msg, stderr );
     ( void )fputs( "\n\r", stderr );
     exit( EXIT_FAILURE );
 }
 
 void
-sys_debug( const char *const szFmt, ... )
+sys_debug( const char *const fmt, ... )
 {
     va_list         ap;
 
-    va_start( ap, szFmt );
-    ( void )vprintf( szFmt, ap );
+    va_start( ap, fmt );
+    ( void )vprintf( fmt, ap );
     ( void )putc( '\r', stdout );
     fflush( stdout );
+
     va_end( ap );
 }
 
 /* ------------------------ Start implementation ( Threads ) -------------- */
 
-/*
- * Starts a new thread with priority "prio" that will begin its execution in the
- * function "thread()". The "arg" argument will be passed as an argument to the
- * thread() function. The id of the new thread is returned. Both the id and
- * the priority are system dependent.
- */
 sys_thread_t
 sys_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio )
 {
-    xTaskHandle     xCreatedTask;
-    sys_prot_t      old_level;
+    return sys_arch_thread_new( thread, arg, prio, THREAD_STACK_SIZE );
+}
 
-    old_level = sys_arch_protect(  );
+/*
+ * Starts a new thread with priority "prio" that will begin its execution in the
+ * function "thread()". The "arg" argument will be passed as an argument to the
+ * thread() function. The argument "ssize" is the requested stack size for the
+ * new thread. The id of the new thread is returned. Both the id and the
+  * priority are system dependent.
+ */
+sys_thread_t
+sys_arch_thread_new( void ( *thread ) ( void *arg ), void *arg, int prio, size_t ssize )
+{
+    sys_thread_t    thread_hdl = SYS_THREAD_NULL;
+    int             i;
+    sys_tcb_t      *p;
 
     /* We disable the FreeRTOS scheduler because it might be the case that the new
      * tasks gets scheduled inside the xTaskCreate function. To prevent this we
      * disable the scheduling. Note that this can happen although we have interrupts
      * disabled because xTaskCreate contains a call to taskYIELD( ).
      */
-    vTaskSuspendAll(  );
-    if( xTaskCreate( thread, tasks[nextthread].name, THREAD_STACK_SIZE,
-                     arg, prio, &xCreatedTask ) == pdPASS )
+    vPortEnterCritical(  );
+
+    p = tasks;
+    i = 0;
+    /* We are called the first time. Initialize it. */
+    if( p == NULL )
     {
-        tasks[nextthread++].pid = xCreatedTask;
+        p = pvPortMalloc( sizeof( sys_tcb_t ) );
+        if( p != NULL )
+        {
+            tasks = p;
+        }
     }
     else
     {
-        xCreatedTask = SYS_THREAD_NULL;
+        /* First task already counter. */
+        i++;
+        /* Cycle to the end of the list. */
+        while( p->next != NULL )
+        {
+            i++;
+            p = p->next;
+        }
+        p->next = pvPortMalloc( sizeof( sys_tcb_t ) );
+        p = p->next;
     }
-    ( void )xTaskResumeAll(  );
 
-    sys_arch_unprotect( old_level );
-    return xCreatedTask;
+    if( p != NULL )
+    {
+        /* Memory allocated. Initialize the data structure. */
+        THREAD_INIT( p );
+        ( void )snprintf( p->name, THREAD_NAME_LEN_MAX, "lwIP%d", i );
+
+        /* Now q points to a free element in the list. */
+        if( xTaskCreate( thread, p->name, ssize, arg, prio, &p->pid ) == pdPASS )
+        {
+            thread_hdl = p;
+        }
+        else
+        {
+            vPortFree( p );
+        }
+    }
+
+    vPortExitCritical(  );
+    return thread_hdl;
+}
+
+void
+sys_arch_thread_remove( sys_thread_t hdl )
+{
+    sys_tcb_t      *current = tasks, *prev;
+    sys_tcb_t      *toremove = hdl;
+    xTaskHandle     pid = ( xTaskHandle ) 0;
+
+    LWIP_ASSERT( "sys_arch_thread_remove: assertion hdl != NULL failed!", hdl != NULL );
+
+    /* If we have to remove the first task we must update the global "tasks"
+     * variable. */
+    vPortEnterCritical(  );
+    if( hdl != NULL )
+    {
+        prev = NULL;
+        while( ( current != NULL ) && ( current != toremove ) )
+        {
+            prev = current;
+            current = current->next;
+        }
+        /* Found it. */
+        if( current == toremove )
+        {
+            /* Not the first entry in the list. */
+            if( prev != NULL )
+            {
+                prev->next = toremove->next;
+            }
+            else
+            {
+                tasks = toremove->next;
+            }
+            LWIP_ASSERT( "sys_arch_thread_remove: can't remove thread with timeouts!",
+                         toremove->timeouts.next == NULL );
+            pid = toremove->pid;
+            THREAD_INIT( toremove );
+            vPortFree( toremove );
+        }
+    }
+    /* We are done with accessing the shared datastructure. Release the 
+     * resources.
+     */
+    vPortExitCritical(  );
+    if( pid != ( xTaskHandle ) 0 )
+    {
+        vTaskDelete( pid );
+        /* not reached. */
+    }
 }
 
 /*
  * Returns the thread control block for the currently active task. In case
  * of an error the functions returns NULL.
  */
-sys_tcb_t      *
-sys_thread_current( void )
+sys_thread_t
+sys_arch_thread_current( void )
 {
-    sys_prot_t      old_level;
-    sys_tcb_t      *ptask = NULL;
-    int             i;
+    sys_tcb_t      *p = tasks;
     xTaskHandle     pid = xTaskGetCurrentTaskHandle(  );
 
-    old_level = sys_arch_protect(  );
-    for( i = 0; i < nextthread; i++ )
+    vPortEnterCritical(  );
+    while( ( p != NULL ) && ( p->pid != pid ) )
     {
-        if( tasks[i].pid == pid )
-        {
-            ptask = &tasks[i];
-        }
+        p = p->next;
     }
-    sys_arch_unprotect( old_level );
-    return ptask;
+    vPortExitCritical(  );
+    return p;
 }
 
 /*
@@ -232,7 +313,7 @@ sys_arch_timeouts( void )
 {
     sys_tcb_t      *ptask;
 
-    ptask = sys_thread_current(  );
+    ptask = sys_arch_thread_current(  );
     LWIP_ASSERT( "sys_arch_timeouts: ptask != NULL", ptask != NULL );
     return ptask != NULL ? &( ptask->timeouts ) : NULL;
 }
@@ -245,10 +326,7 @@ sys_arch_timeouts( void )
 sys_sem_t
 sys_sem_new( u8_t count )
 {
-    sys_prot_t      old_level;
     xSemaphoreHandle xSemaphore;
-
-    old_level = sys_arch_protect(  );
 
     vSemaphoreCreateBinary( xSemaphore );
     if( xSemaphore != SYS_SEM_NULL )
@@ -258,11 +336,13 @@ sys_sem_new( u8_t count )
             xSemaphoreTake( xSemaphore, 1 );
         }
 #ifdef SYS_STATS
+        vPortEnterCritical(  );
         lwip_stats.sys.sem.used++;
         if( lwip_stats.sys.sem.used > lwip_stats.sys.sem.max )
         {
             lwip_stats.sys.sem.max = lwip_stats.sys.sem.used;
         }
+        vPortExitCritical(  );
 #endif
     }
     else
@@ -270,7 +350,6 @@ sys_sem_new( u8_t count )
         LWIP_ASSERT( "sys_sem_new: xSemaphore == SYS_SEM_NULL\n", xSemaphore != SYS_SEM_NULL );
     }
 
-    sys_arch_unprotect( old_level );
     return xSemaphore;
 }
 
@@ -282,7 +361,9 @@ sys_sem_free( sys_sem_t sem )
     if( sem != SYS_SEM_NULL )
     {
 #ifdef SYS_STATS
+        vPortEnterCritical(  );
         lwip_stats.sys.sem.used--;
+        vPortExitCritical(  );
 #endif
         vQueueDelete( sem );
     }
@@ -360,11 +441,13 @@ sys_mbox_new( void )
     if( mbox != SYS_MBOX_NULL )
     {
 #ifdef SYS_STATS
+        vPortEnterCritical(  );
         lwip_stats.sys.mbox.used++;
         if( lwip_stats.sys.mbox.used > lwip_stats.sys.mbox.max )
         {
             lwip_stats.sys.mbox.max = lwip_stats.sys.mbox.used;
         }
+        vPortExitCritical(  );
 #endif
     }
     return mbox;
@@ -392,7 +475,9 @@ sys_mbox_free( sys_mbox_t mbox )
         }
         vQueueDelete( mbox );
 #ifdef SYS_STATS
+        vPortEnterCritical(  );
         lwip_stats.sys.mbox.used--;
+        vPortExitCritical(  );
 #endif
     }
 }
@@ -466,4 +551,12 @@ sys_arch_mbox_fetch( sys_mbox_t mbox, void **msg, u32_t timeout )
         timespent = SYS_ARCH_TIMEOUT;
     }
     return timespent;
+}
+
+unsigned long
+sys_jiffies( void )
+{
+    portTickType    xTicks = xTaskGetTickCount(  );
+
+    return ( unsigned long )TICKS_TO_MS( xTicks );
 }
