@@ -2,6 +2,7 @@
 2006-09-06 (REL_1_0_2) Christian Walter <wolti@sil.at>:
  Notes: Fixed bug in FreeRTOS porting layer for STR71X/lwIP target where
    memory is not freed in the sys_arch_thread_remove function. 
+   Synched MCF5235TCP port with the FreeRTOS/lwIP port for the STR71X.
 
  Detailed notes:
    - BUG (STR71XTCP): Sys_arch_thread_remove did not free the memory from
@@ -9,6 +10,8 @@
    - BUG (STR71XTCP): Unnecessary call to vTaskSuspendAll removed.
    - BUG (STR71XTCP): Bug with counting variable. The first to lwIP tasks
        got the same name (lwIP0).
+   - FEATURE (MCF5235TCP): Enhanced functions from the STR71X/lwIP port
+       merged into the Coldfire port.
 
 2006-09-04 (REL_1_0_1) Christian Walter <wolti@sil.at>:
  Notes: Fixed bug in serial driver for STR71x target when the ring buffer
